--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Memory Cards</title>
+    <title>Index Cards</title>
   </head>
   <body>
     <button id="clear" class="clear btn">
@@ -20,7 +20,7 @@
     </button>
 
     <h1>
-      Memory Cards
+      Index Cards
       <button id="show" class="btn btn-small">
         <i class="fas fa-plus"></i> Add New Cards
       </button>
